--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 	<!------footer start--------->
 	<footer>
 		<p>Ayush Srivastava</p>
-		<p>For more HTML, CSS, and coding tutorial - please click on the link below to subscribe to my channel:</p>
+		
 		<div class="social">
-			<a href="#"><i class="fab fa-facebook-f"></i></a>
-			<a href="#"><i class="fab fa-instagram"></i></a>
+			<a href="https://www.facebook.com/ayush.srivastav.92"><i class="fab fa-facebook-f"></i></a>
+			<a href="https://www.instagram.com/ayushsri.1505/"><i class="fab fa-instagram"></i></a>
 			<a href="#"><i class="fab fa-dribbble"></i></a>
 		</div>
 		<p class="end">CopyRight By Ayush Srivastava</p>
